v3.x.y - YYYY-MMM-DD (to be released)
-------------------------------------
   
  - auditlog: Computes whether or not to save while loading the rules.
    [@zimmerle]
  - actions: Computes Rule association while loading the rules given a
    performance boost on run time.
    [@zimmerle]
  - Regression: Mark the test as failed in case of segfault.
    [@zimmerle]
  - Replaced t:lowerCase backend for a better performance.
    [@zimmerle]
  - More structured rules dump. Better supporting debugging.
    [@zimmerle]
  - Added the basics for supporting better error/warning handling while
    loading configurations.
    [@zimmerle]
  - IMPORTANT: SecDefaultAction behaves changing: SecDefaultAction specified
    on a child configuration will overwrite the ones specified on the parent;
    Previously it was concatenating.
    [@zimmerle]
  - Using std::shared_ptr instead of generates its own references counters
    for Rules and related.
    [@zimmerle]
  - Better handle shared_pointers on messages aiming for better performance.
    [@zimmerle]
  - Better handle memory usage on transformations aiming for better
    performance.
    [@zimmerle]
  - Coding refactoring on the Rule class. The Rule class is now refactored
    into RuleWithOperator, RuleWithActions, and RuleUnconditional.
  - Add support for new operator rxGlobal
    [@martinhsv]
  - Fix IP address logging in Section A
    [Issue #2300 - @inaratech, @zavazingo, @martinhsv]
  - Adds support to lua 5.4
    [@zimmerle]
  - GeoIP: switch to GEOIP_MEMORY_CACHE from GEOIP_INDEX_CACHE
    [Issues #2378, #2186 - @defanator]
  - rx: exit after full match (remove /g emulation); ensure capture
    groups occuring after unused groups still populate TX vars
    [Issue #2336 - @martinhsv]
  - Correct CHANGES file entry for #2234
  - Add support to test framework for audit log content verification
    and add regression tests for issues #2000, #2196
  - Support configurable limit on number of arguments processed